# TaintedGrail-QuestsTracker

./: CMakeLists.txt  Main.qml  README.md
src/: main.cpp
src/model/: quest.h  questmodel.cpp  questmodel.h  savefilemanager.cpp  savefilemanager.h  subtask.h
src/view/: Main.qml  QuestsMap.qml  QuestsTracker.qml  theme.js
src/view/element/: TGText.qml
